# richery-pil

./: LICENSE  README.md  pyproject.toml
.github/workflows/: python-publish.yml
examples/: test.py  txt_chs.txt  txt_color.txt  txt_hgl.txt  txt_lat.txt  txt_nom.txt
richery/: __init__.py  ansitool.py  canvas.py  colordef.py  textwork.py
